@@ -1,6 +1,7 @@
 0.3.5.7
   - (sharktooth) [x264ConfigurationPanel] Fix default CRF value when changing from bitrate mode to CRF. Adjusted default bitrate to 1000
   - (zathor) [FileIndexer] improved handling if DGIndexNV is not available
+  - (zathor) [MkvMergeMuxer] header compression is disabled for all tracks
 
 0.3.5.6
   - (sharktooth) [x264] Added --sar option to force SAR for BD or other devices compatibility
